First version of giveaway endpoints
